--- a/style.css
+++ b/style.css
@@ -438,12 +438,18 @@ header {
 
 .cta-section {
   padding: 120px var(--padding-inline-section) 80px;
-  background-color: #183b54;
+  background-color: #9dc4ee;
 }
 
+.cta-section-container h2{
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 700;
+}
 .cta-section-container p {
   color: var(--primary-color);
   margin-top: 20px;
+  font-weight: 500;
 }
 
 /* footer */
