example cards are not proper positioned with text

--- a/style.css
+++ b/style.css
@@ -384,16 +384,19 @@ header {
   flex-direction: column;
   gap: 20px;
   text-align: center;
+  
 }
 
 .examples-area {
-  justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
   margin-block: 30px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
  .examples-card {
-  width: 23%;
+  width: 50%;
   position: relative;
   height: 300px;
   background: var(--secondary-text-color);
@@ -401,6 +404,10 @@ header {
     url(asset\ 35.jpeg);
   background-size: cover;
   transition: 0.2s ease-out;
+  display: flex;
+  align-items: flex-end;
+  padding: 20px;
+  text-decoration: none;
 } 
 
 .examples-card:hover {
@@ -420,11 +427,8 @@ header {
 }
 
 .card-text {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  right: 20px;
   color: var(--secondary-text-color);
+  font-size: 30px;
 }
 
 /* cta section */
